# WEB_modul_02_07

./: config.ini  models.py  my_select.py  pyproject.toml  seeds.py
conf/: db.py
migrations/: env.py
migrations/versions/: 9a5c4df53f1a_init.py
